[package]
name = "sample"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { path = "../third_party/prost" }
handle_extract = { path = ".." }

[build-dependencies]
prost-build = { path = "../third_party/prost/prost-build" }
